# Mental-math

./: CMakeLists.txt  LICENSE  MentalMath.h.in  README.md  main.cpp  miscellaneous.cpp  miscellaneous.h  numsense.cpp  numsense.h  rndnum.cpp  rndnum.h
HeadersAndSources/: CMakeLists.txt  ExamMode.cpp  ExamMode.h  HandleUpdates.cpp  HandleUpdates.h  MathFunctions.cpp  MathFunctions.h  Score.cpp  Score.h  Textbox.cpp  Textbox.h  Window.cpp  Window.h
